import { generate } from 'css-tree';
import { setupTailwind } from '../tailwindcss/setup-tailwind.js';
import { sanitizeNonInlinableRules } from './sanitize-non-inlinable-rules.js';
import { expect, describe, it } from 'vitest';

describe('sanitizeNonInlinableRules()', () => {
	it('inlines rules that can be inlined', async () => {
		const tailwind = await setupTailwind({});
		tailwind.addUtilities(['bg-gray-900', 'text-red-300', 'text-lg']);
		const stylesheet = tailwind.getStyleSheet();

		sanitizeNonInlinableRules(stylesheet);
		expect(generate(stylesheet)).toMatchSnapshot();
	});

	it('handles CSS nesting in hover pseudo styles', async () => {
		const tailwind = await setupTailwind({});
		tailwind.addUtilities([
			'hover:text-sky-600',
			'sm:focus:outline-none',
			'md:hover:bg-gray-100',
			'lg:focus:underline'
		]);

		const stylesheet = tailwind.getStyleSheet();

		sanitizeNonInlinableRules(stylesheet);
		expect(generate(stylesheet)).toMatchSnapshot();
	});

	it('supports basic media query rules', async () => {
		const tailwind = await setupTailwind({});
		tailwind.addUtilities(['sm:mx-auto', 'sm:max-w-lg', 'sm:rounded-lg', 'md:px-10', 'md:py-12']);
		const stylesheet = tailwind.getStyleSheet();

		sanitizeNonInlinableRules(stylesheet);

		expect(generate(stylesheet)).toMatchSnapshot();
	});
});
